# HypixelIO

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Pipfile  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  test.sqlite  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-example-tests.yml  python-flake8-lint.yml  python-publish.yml  python-tests.yml
docs/: Makefile  api.rst  caching.rst  conf.py  exceptions.rst  faq.rst  index.rst  make.bat  quickstart.md  requirements.txt
docs/_async/: api.rst
docs/asyncio/: api.rst
docs/css/: custom.css
docs/extensions/: resourcelinks.py
docs/source/: api.rst  conf.py  index.rst  quickstart.md
examples/: async-player.py  async_player.py  get-guild-data.py  get-player-data.py  get-watchdog-stats.py  get_guild_data.py  get_player_data.py  get_watchdog_stats.py  implement-caching.py  normal-caching.py  user_to_uuid.py  uuid-to-username.py
hypixelio/: __init__.py  base.py  client.py  const.py  constants.py  endpoints.py  exceptions.py  utils.py
hypixelio/_async/: __init__.py  client.py  converters.py  portal.py  utils.py
hypixelio/exceptions/: __init__.py  exceptions.py
hypixelio/lib/: __init__.py  client.py  converters.py  utils.py
hypixelio/models/: boosters.py  find_guild.py  friends.py  games.py  guild.py  key.py  leaderboard.py  player.py  player_status.py  recent_games.py  watchdog.py
tests/: test_converters.py  test_player.py
(+46 files in other folders)
